--- a/.github/workflows/master_poc-petclinic-rest.yml
+++ b/.github/workflows/master_poc-petclinic-rest.yml
@@ -1,12 +1,12 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy JAR app to Azure Web App - poc-petclinic-rest
+name: Build and deploy JAR app to Azure Web App - poc-petclinic-rest1
 
 on:
   push:
     branches:
-      - master
+      - develop
   workflow_dispatch:
 
 jobs:
@@ -47,7 +47,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'poc-petclinic-rest'
+          app-name: 'poc-petclinic-rest1'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_52FB787F1C444F40B8769AB6454CB56C }}
           package: '*.jar'
