--- a/.github/workflows/master_poc-petclinic-rest.yml
+++ b/.github/workflows/master_poc-petclinic-rest.yml
@@ -49,5 +49,5 @@ jobs:
         with:
           app-name: 'poc-petclinic-rest1'
           slot-name: 'Production'
-          publish-profile: ${{ AZUREAPPSERVICE_PUBLISHPROFILE_22F79A6A4FF34CCBAE0F923641C4C69D }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_22F79A6A4FF34CCBAE0F923641C4C69D }}
           package: '*.jar'
