--- a/.github/workflows/master_poc-petclinic-rest.yml
+++ b/.github/workflows/master_poc-petclinic-rest.yml
@@ -47,6 +47,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
+          login: azure/login@v1
           app-name: 'poc-petclinic-rest1'
           slot-name: 'Production'
           credentials: ${{ secrets.AZURE_CREDENTIALS }}
