--- a/.github/workflows/master_poc-petclinic-rest.yml
+++ b/.github/workflows/master_poc-petclinic-rest.yml
@@ -38,6 +38,12 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     
     steps:
+      - uses: actions/checkout@v2      
+      - name: Azure Login     
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}   
+          
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
@@ -49,5 +55,4 @@ jobs:
         with:
           app-name: 'poc-petclinic-rest1'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_52FB787F1C444F40B8769AB6454CB56C }}
           package: '*.jar'
