--- a/.github/workflows/master_poc-petclinic-rest.yml
+++ b/.github/workflows/master_poc-petclinic-rest.yml
@@ -40,7 +40,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2      
       - name: Azure Login     
-        uses: azure/login@v1
+        uses: azure/CLI@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}   
           
