--- a/.github/workflows/master_poc-petclinic-rest.yml
+++ b/.github/workflows/master_poc-petclinic-rest.yml
@@ -56,4 +56,5 @@ jobs:
         with:
           app-name: 'poc-petclinic-rest1'
           slot-name: 'Production'
-          package: '${{ github.workspace }}/target/*.jar'
+          package: '${{ github.workspace }}/'
+          
